maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:8: error: ';' expected but 'if' found.
    case 0 => run2North(); gauche() if (estFaceMur()) { etat = 1; }
                                    ^